--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Liste dev</title>
+	<meta charset="utf-8">
+
+	<script type="text/javascript" src="js/liste.js"></script>
 </head>
 <body>
+
+	<h1>Liste développeurs IFA</h1>
+
+	<div id="list">
+		
+	</div>
+
+	<!--<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>-->
+	<script type="text/javascript" src="js/vanilla.js"></script>
+	<script type="text/javascript" src="js/js.js"></script>
 
 </body>
 </html>
