--- a/index.html
+++ b/index.html
@@ -14,8 +14,22 @@
 		
 	</div>
 
-	<!--<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>-->
+	<form id="form" method="POST" action="profil.html">
+		<input id="lastname" type="text" name="lastname" placeholder="Nom">
+		<input id="firstname" type="text" name="firstname" placeholder="Prénom">
+	</form>
+
+	<button id="add" type="submit">Ajouter une personne</button>
+
+	<h2>Personne ajoutée</h2>
+
+	<div id="perso_add">
+		
+	</div>
+	
+	<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="js/vanilla.js"></script>
+	<script type="text/javascript" src="js/add_dev.js"></script>
 	<script type="text/javascript" src="js/js.js"></script>
 
 </body>
