--- a/profil.html
+++ b/profil.html
@@ -3,8 +3,10 @@
 	<head>
         <title></title>
         <meta charset="utf-8">
+       
+        <!--<link rel="stylesheet" type="text/css" href="/css/style.css">-->
 
-		<!--<link rel="stylesheet" type="text/css" href="/css/style.css">-->
+
 		<script type="text/javascript" src="js/liste.js"></script>
     </head>
     
@@ -18,7 +20,9 @@
 
         <button> <a href="index.html">retour liste</a></button>
 
-        <script type="text/javascript" src="js/vanilla2.js"></script>
+        <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+        <!--<script type="text/javascript" src="js/vanilla2.js"></script>-->
+        <script type="text/javascript" src="js/add_dev.js"></script>
 		<script type="text/javascript" src="js/js.js"></script>
 	</body>
 </html>
